--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
