--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "nodemon -w bin/www -w . start",
     "dev": "DEBUG=fitted:* nodemon -w bin/www -w . start",
     "dev-express": "DEBUG=express:* nodemon -w bin/www -w . start",
-    "attached": "node --inspect-brk ./bin/www"
+    "attached": "node --inspect-brk ./bin/www",
+    "win": "set DEBUG=fitted:* && npm start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
